--- a/spring-kaka-producer/src/main/resources/application.properties
+++ b/spring-kaka-producer/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+#Broker
+#spring.kafka.consumer.bootstrap-servers: localhost:9092
+#spring.kafka.consumer.group-id: group1
+#spring.kafka.consumer.auto-offset-reset: earliest
+#spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+#spring.kafka.consumer.value-serializer: org.apache.kafka.common.serialization.StringSerializer
 
+spring.kafka.producer.bootstrap-servers: localhost:9092
+spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.key-value: org.apache.kafka.common.serialization.StringSerializer
